# ai-value-realiser

./: .env.example  .gitignore  README.md  pyproject.toml
case_library/: AI_CASE_LIBRARY_SPECIFICATION_v1_5.md  CURSOR_STARTUP_BRIEFING.md  README.md  __init__.py  cleanup_duplicate_sources.py  overlay_loader.py  run_industry_classification.py  run_legacy_cases.py  run_new_ai_cases.py  seed.py
case_library/Classifier_Over-layer/: CLASSIFICATION_OVERLAY_ARCHITECTURE.md
case_library/Classifier_Over-layer/Industry_sectors/: 2025-gics-top-two-levels.xlsx  ISIC5_top_two_levels_with_division_includes.xlsx
case_library/ontology/: __init__.py  ontology_v1.0.yaml
case_library/overlays/: README.md  __init__.py
case_library/pipeline/: __init__.py  casefile_export.py  deduplication.py  migration_progress.py  orchestrator.py  persistence.py  step1_discovery.py  step2_extraction.py  step3_claims.py  step4_verification.py  step5_validation.py
case_library/runtime/: __init__.py  config.py
case_library/schemas/: __init__.py  models.py
case_library/viewer/: README.md  __init__.py  server.py
docs/: DEVELOPMENT_NOTES_CASE_LIBRARY.md  MIGRATION_ESTIMATE.md  QUICK_START_CHECKLIST.md  WORK_PLAN.md  WORK_PLAN_SUMMARY.md
docs/specs/: AI_CASE_LIBRARY_SPECIFICATION.md  AI_CASE_LIBRARY_SPECIFICATION_v1_5.md  CURSOR_STARTUP_BRIEFING.md
opportunity_analyser/: __init__.py
profiler/: __init__.py
tests/: conftest.py  test_deduplication.py  test_orchestrator_discovery_extraction.py  test_orchestrator_step2.py  test_orchestrator_step4.py  test_overlay_loader.py  test_persistence.py  test_schemas.py  test_step1_discovery.py  test_step2_extraction.py  test_step3_claims.py  test_step4_verification.py  test_step5_validation.py
tools/: __init__.py  cli.py
(+827 files in other folders)
